@@ -1,2 +1,0 @@
-#define EYEDB_VERSION "@EYEDB_VERSION@";
-#define EYEDB_NUMVERSION "@EYEDB_NUMVERSION@";
